@@ -377,6 +377,7 @@ void usage(const char *name, FILE *where)
   fprintf (where, "  -s --silent           Reduce the amount of details to show\n");
   fprintf (where, "  --distances           Only show distance matrices\n");
   fprintf (where, "  --memattrs            Only show memory attributes\n");
+  fprintf (where, "  --cpukinds            Only show CPU kinds\n");
   fprintf (where, "  -c --cpuset           Show the cpuset of each object\n");
   fprintf (where, "  -C --cpuset-only      Only show the cpuset of each object\n");
   fprintf (where, "  --taskset             Show taskset-specific cpuset strings\n");
@@ -705,6 +706,7 @@ main (int argc, char *argv[])
 
   loutput.show_distances_only = 0;
   loutput.show_memattrs_only = 0;
+  loutput.show_cpukinds_only = 0;
   loutput.show_only = HWLOC_OBJ_TYPE_NONE;
   loutput.show_cpuset = 0;
   loutput.show_taskset = 0;
@@ -769,6 +771,8 @@ main (int argc, char *argv[])
 	loutput.show_distances_only = 1;
       } else if (!strcmp (argv[0], "--memattrs")) {
         loutput.show_memattrs_only = 1;
+      } else if (!strcmp (argv[0], "--cpukinds")) {
+        loutput.show_cpukinds_only = 1;
       } else if (!strcmp (argv[0], "-h") || !strcmp (argv[0], "--help")) {
 	usage(callname, stdout);
         exit(EXIT_SUCCESS);
@@ -1260,6 +1264,7 @@ main (int argc, char *argv[])
         || loutput.show_only != HWLOC_OBJ_TYPE_NONE
 	|| loutput.show_distances_only
         || loutput.show_memattrs_only
+        || loutput.show_cpukinds_only
         || loutput.verbose_mode != LSTOPO_VERBOSE_MODE_DEFAULT)
       output_format = LSTOPO_OUTPUT_CONSOLE;
   }
